--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ li:hover{
 
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
     .nav {
         font-size: 0.5em;
         padding: 8px;
+        gap: 10px;
     }
 }
 @media only screen and (max-width: 1000px) {
@@ -85,6 +86,7 @@ a{
     width: 100%;
 }
 .grid-image{
+    cursor: pointer;
     background-color: #444;
     padding: 80px;
     margin:20px;
@@ -96,6 +98,7 @@ a{
     padding: 20px;
     margin: 30px;
 }
+
 .btn{
     background-color: #00ADB5;
     color: white;
@@ -104,6 +107,11 @@ a{
     border-radius: 5px;
     text-align: center;
     font-size: 1.1em;
+}
+
+.btn:hover{
+    background: #009ea7;
+    cursor: pointer;
 }
 
 /* -------FOOTER-----Styling----------------- */
@@ -132,6 +140,7 @@ img[alt = "logo-img"]{
     padding: 0.5rem;
 }
 .interest, .programs, .research, .about, .resources {
+    cursor: pointer;
     color: white;
     font-size: large;
     text-align: left;
